[package]
name = "cute-sqlite-kv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A simple, multi-process, persistent key-value store backed by SQLite"
license = "MPL-2.0"
repository = "https://github.com/ChrisJefferson/cute-sqlite-kv"
readme = "README.md"
keywords = ["sqlite", "key-value", "kv", "store", "persistent"]
categories = ["database"]

[dependencies]
# "bundled" compiles SQLite from source rather than linking a system
# library, so the crate builds out of the box on every platform (notably
# Windows, which otherwise fails to find sqlite3.lib). Requires a C compiler.
rusqlite = { version = "0.36.0", features = ["bundled"] }


[dev-dependencies]
tempfile = "3.10"